--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
+    "uuid": "^11.1.0",
     "yt-dlp-exec": "^1.0.2",
     "ytdl-core": "^4.11.5"
   }
